Added dictionnary of compounds

--- a/pathway_analysis/Biopython.ipynb
+++ b/pathway_analysis/Biopython.ipynb
@@ -53,7 +53,11 @@
     "\n",
     "Install Biopython package from pip:\n",
     "\n",
-    "> python -m pip install Biopython"
+    "> python -m pip install Biopython\n",
+    "\n",
+    "## Downloading the dictionnary of pathways (per enzyme)\n",
+    "\n",
+    "This step can be skipped as the dictionnary is stored in /data"
    ]
   },
   {
@@ -86,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading the dictionnary of pathways"
+    "## Loading the dictionnary of pathways (per enzyme)"
    ]
   },
   {
@@ -111,7 +115,10 @@
     "# Enrichment preparation\n",
     "\n",
     "The remaining steps will be done in R (cf. enrichment_analysis.Rmd)\n",
-    "\n"
+    "\n",
+    "## Downloading the dictionnary of enzymes (per pathway)\n",
+    "\n",
+    "This step can also be skipped as the dictionnary is stored in /data"
    ]
   },
   {
@@ -119,12 +126,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download all ec pathways from KEGG"
+    "Download all ec pathways from KEGG."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +183,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading the dictionnary of enzymes (per pathway)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -187,6 +202,51 @@
     "with open(\"data/all_pathways_enzymes_dict.json\", \"r\") as file:\n",
     "    # Load the dictionary from the file\n",
     "    all_pathways_enzymes_dict = json.load(file)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Downloading the dictionnary of compounds (per pathway)\n",
+    "\n",
+    "This step can also be skipped as the dictionnary is stored in /data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Attribute the related compounds (metabolites) for all the pathways"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import json\n",
+    "\n",
+    "mb_pathways = {}\n",
+    "\n",
+    "for pathway_id in all_pathway_ids:\n",
+    "    pathway_url = f'http://rest.kegg.jp/get/{pathway_id}'\n",
+    "    pathway_response = requests.get(pathway_url)\n",
+    "    pathway_text = pathway_response.text.strip()\n",
+    "    \n",
+    "    # find the lines containing enzyme information\n",
+    "    pattern = r\"COMPOUND\\s+(.*?)\\s+REFERENCE\"\n",
+    "    compound_lines = re.search(pattern, pathway_text, re.DOTALL)\n",
+    "    if compound_lines:\n",
+    "        compound = [s.lstrip() for s in compound_lines.group(1).strip().split('\\n')]\n",
+    "        mb_pathways[pathway_id] = compound\n",
+    "\n",
+    "with open(\"data/all_pathways_compounds_dict.json\", \"w\") as file:\n",
+    "    json.dump(mb_pathways, file)  # encode dict into JSON"
    ]
   },
   {
@@ -233,7 +293,15 @@
     "    pathway_names[ec_code] = pathway_name\n",
     "\n",
     "with open(\"data/ec_pathway_names_dict.json\", \"w\") as file:\n",
-    "    json.dump(pathway_names, file)  # encode dict into JSON\n"
+    "    json.dump(pathway_names, file)  # encode dict into JSON"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading the dictionnary of compounds (per pathway)"
    ]
   },
   {
@@ -245,9 +313,9 @@
     "import json\n",
     "\n",
     "# Open the file for reading\n",
-    "with open(\"data/ec_pathway_names_dict.json\", \"r\") as file:\n",
+    "with open(\"data/all_pathways_compounds_dict.json\", \"r\") as file:\n",
     "    # Load the dictionary from the file\n",
-    "    pathway_names = json.load(file)"
+    "    mb_pathways = json.load(file)"
    ]
   }
  ],
