--- a/pathway_analysis/metabolomics_analysis.Rmd
+++ b/pathway_analysis/metabolomics_analysis.Rmd
@@ -8,20 +8,25 @@ output: html_document
 ```{r, message=FALSE, warning=FALSE}
 # Check if libraries are already installed > otherwise install it
 if(!requireNamespace("BiocManager", quietly = TRUE)) install.packages("BiocManager",repos = "http://cran.us.r-project.org")
-if(!"" %in% installed.packages()) BiocManager::install("")
-if(!"" %in% installed.packages()) BiocManager::install("")
+if(!"knitr" %in% installed.packages()) BiocManager::install("knitr")
+if(!"jsonlite" %in% installed.packages()) BiocManager::install("jsonlite")
+if(!"dplyr" %in% installed.packages()) BiocManager::install("dplyr")
+if(!"clusterProfiler" %in% installed.packages()) BiocManager::install("clusterProfiler")
+if(!"ggplot2" %in% installed.packages()) BiocManager::install("ggplot2")
 
 # Load packages
 library(knitr)
-library()
-library()
+library(jsonlite)
+library(dplyr)
+library(clusterProfiler)
+library(ggplot2)
 ```
 
 ## Generate HMDB.csv for data annotation
 
 This can be skipped...
 
-```{r setup, include=FALSE, eval=FALSE}
+```{r setup}
 # Sets current path as working file path for all code chuncks
 knitr::opts_knit$set(root.dir = ".")
 
@@ -29,6 +34,11 @@ knitr::opts_knit$set(root.dir = ".")
 mbxCount <- read.table(file = "../preprocessing/output/mbxData", sep = '\t', header = TRUE)
 # Read metadata file sample labels
 metaData <- read.table(file = "../preprocessing/output/mbxMetaData", sep = '\t', stringsAsFactors = TRUE, header = TRUE)
+
+# Read JSON file with all the pathways and the compounds within into R object
+PW.to.compound <- fromJSON("data/all_pathways_compounds_dict.json")
+# Read JSON file with all the pathways codes and their names within into R object
+PW.all.names <- fromJSON("data/ec_pathway_names_dict.json")
 
 ```
 ## Filtering Steps
@@ -54,8 +64,8 @@ metaData.nonIBD <- metaData[metaData$diagnosis=="nonIBD",]
 
 # Select metagenomics data from CD, UC and nonIBD
 mbxCount.CD <- subset(mbxCount, select=metaData.CD$External.ID)
-mbxCount.UC <- subset(mbxCount, select=metaData.UC$External.ID)
-mbxCount.nonIBD <- subset(mbxCount, select=metaData.nonIBD$External.ID)
+mbxCount.UC <- subset(mbxCount, select=c(1,2, metaData.UC$External.ID))
+mbxCount.nonIBD <- subset(mbxCount, select=c(1,2, metaData.nonIBD$External.ID))
 
 #remove(metaData.CD, metaData.UC, metaData.nonIBD, metaData, mbxCount)
 ```
@@ -66,9 +76,9 @@ mbxCount.nonIBD <- subset(mbxCount, select=metaData.nonIBD$External.ID)
 # Compute statistical significance (using t-test)
 pValue.CD = NULL # Empty list for the p-values
 
-for(i in 1 : nrow(mbxCount.nonIBD)) { # For each gene : 
-	x = mbxCount.nonIBD[i,c(3:ncol(mbxCount.nonIBD))] # control of gene number i
-	y = mbxCount.CD[i,c(3:ncol(mbxCount.CD))] # CD of gene number i
+for(i in 1 : nrow(mbxCount.nonIBD)) { # For each metabolite : 
+	x = mbxCount.nonIBD[i,-(1:2)] # control of metabolite number i
+	y = mbxCount.CD[i,-(1:2)] # CD of metabolite number i
 	
 	# Compute t-test between the two conditions
 	t = t.test(x, y)
@@ -83,7 +93,7 @@ pAdjust.CD = p.adjust(pValue.CD, method="BH", n= nrow(mbxCount.nonIBD))
 #remove(pValue.CD, t, x, y, i)
 ```
 
-```{r}
+```{r eval=FALSE}
 library("DESeq2")
 
 metaData.nonIBD.CD <- metaData[(metaData$diagnosis=="CD" | metaData$diagnosis=="nonIBD"),]
@@ -110,8 +120,8 @@ n_distinct(which(res.CD$padj<0.05))
 pValue.UC = NULL # Empty list for the p-values
 
 for(i in 1 : nrow(mbxCount.nonIBD)) { # For each gene : 
-	x = mbxCount.nonIBD[i,] # control of gene number i
-	y = mbxCount.UC[i,] # UC of gene number i
+	x = mbxCount.nonIBD[i,-(1:2)] # control of gene number i
+	y = mbxCount.UC[i,-(1:2)] # UC of gene number i
 	
 	# Compute t-test between the two conditions
 	t = t.test(x, y)
@@ -123,7 +133,7 @@ for(i in 1 : nrow(mbxCount.nonIBD)) { # For each gene :
 # Apply Benjamini Hochberg correction to pvalues to correct for multiple testing
 pAdjust.UC = p.adjust(pValue.UC, method="BH", n= nrow(mbxCount.nonIBD))
 
-remove(pValue.UC, t, x, y, i)
+#remove(pValue.UC, t, x, y, i)
 ```
 
 
@@ -131,18 +141,12 @@ remove(pValue.UC, t, x, y, i)
 
 ```{r}
 # Select statistically significant enzymes
-deg.CD <- mbxCount.CD[which(pAdjust.CD<0.05),]
-deg.CD$pAdjust <- pAdjust.CD[which(pAdjust.CD<0.05)]
-deg.UC <- mbxCount.UC[which(pAdjust.UC<0.05),]
-deg.UC$pAdjust <- pAdjust.UC[which(pAdjust.UC<0.05)]
+deg.CD <- mbxCount.CD[which(pValue.CD<0.05),]
+deg.CD$pValue <- pValue.CD[which(pValue.CD<0.05)]
+deg.UC <- mbxCount.UC[which(pValue.UC<0.05),]
+deg.UC$pValue <- pValue.UC[which(pValue.UC<0.05)]
 
-# Get the row names and split them at the colon
-deg.UC.EC <- row.names(deg.UC)
-deg.UC.EC <- lapply(strsplit(deg.UC.EC, ":"), "[[", 1)
-deg.CD.EC <- row.names(deg.CD)
-deg.CD.EC <- lapply(strsplit(deg.CD.EC, ":"), "[[", 1)
-
-remove(pAdjust.CD, pAdjust.UC)
+#remove(pAdjust.CD, pAdjust.UC)
 ```
 
 ## Generate mbxData
@@ -152,151 +156,36 @@ This can be skipped...
 https://tabbassidaloii.shinyapps.io/BridgeDb-Shiny/
 
 
-```{r, eval=FALSE}
-# Read full metabolomics data
-mbxCount <- read.table(file = "data/iHMP_metabolomics.tsv", sep = '\t', header = TRUE)
-# Remove rows with empty HMDB
-mbxCount <- mbxCount[mbxCount$HMDB...Representative.ID. != "", ]
-# Remove rows with "redundant ion" in HMDB column
-mbxCount <- mbxCount[mbxCount$HMDB...Representative.ID. != "redundant ion", ]
-# Remove rows with NA HMDB
-mbxCount <- mbxCount[!is.na(mbxCount$HMDB...Representative.ID.), ]
-# Remove parameters columns from the metabolomics
-mbxCount <- mbxCount[,-c(1:4, 7)]
-# Rename the HMDB column
-colnames(mbxCount)[1] <- "HMDB"
-# Remove "*" suffix in HMDB column
-mbxCount$HMDB <- gsub("\\*", "", mbxCount$HMDB)
-
-# Write the result in a file
-write.table(mbxCount, "data/mbxData", sep ="\t", row.names = FALSE)
-
-
-write.table(mbxCount$HMDB, "data/HMDB.csv", sep = ",", row.names = FALSE, col.names = FALSE, quote = FALSE)
-```
-
 ## ...
 
 ```{r}
 # Read metadata file sample labels
-metaData <- read.table(file = "../analysis/data/metaData", sep = '\t', stringsAsFactors = TRUE, header = TRUE)
+#metaData <- read.table(file = "../preprocessing/output/mbxMetaData", sep = '\t', stringsAsFactors = TRUE, header = TRUE)
 # Read KEGG compound to HMDB list
-compound.HMDB <- read.table(file = "data/compound_hmdb.list", sep = '\t', header = FALSE)
+compound.HMDB <- read.table(file = "data/XrefBatch_mapping_BridgeDB-Shiny.csv", sep = ',', header = TRUE)
+# Remove ... columns
+compound.HMDB <- compound.HMDB[, -c(2,4)]
 # Change column names
-colnames(compound.HMDB) <- c("compound", "HMDB", "equivalent")
-# Remove "equivalent" column
-compound.HMDB <- compound.HMDB[, -3]
-# Remove "cpd:" prefix
-compound.HMDB$compound <- gsub("cpd:", "", compound.HMDB$compound)
-# Remove "hmdb:" prefix
-compound.HMDB$HMDB <- gsub("hmdb:", "", compound.HMDB$HMDB)
+colnames(compound.HMDB) <- c("HMDB", "compound")
 ```
 
 ```{r}
-# Read metabolomics data
-mbxCount <- read.table(file = "data/mbxData", sep = '\t', header = TRUE)
 # Merge the KEGG compound to the full metabolomics data
-mbxCount <- merge(mbxCount, compound.HMDB, by = "HMDB", all.x = TRUE)
+deg.CD <- merge(deg.CD, compound.HMDB, by = "HMDB", all.x = TRUE)
+length(which(is.na(deg.CD)))
 # remove NAs for compounds
-mbxCount <- mbxCount[!is.na(mbxCount$compound), ]
+deg.CD <- deg.CD[!is.na(deg.CD$compound), ]
 # Relocate the compound column as first
-mbxCount <- mbxCount %>% relocate(compound)
-# 
-#rownames(mbxCount) <- mbxCount[,1]
-```
+deg.CD <- deg.CD %>% relocate(compound)
 
+# Merge the KEGG compound to the full metabolomics data
+deg.UC <- merge(deg.UC, compound.HMDB, by = "HMDB", all.x = TRUE)
+length(which(is.na(deg.UC)))
+# remove NAs for compounds
+deg.UC <- deg.UC[!is.na(deg.UC$compound), ]
+# Relocate the compound column as first
+deg.UC <- deg.UC %>% relocate(compound)
 
-## Filtering Steps
-
-We will apply some filtering process to filter out genes in the input data
-
-```{r filtering,warning=FALSE, message=FALSE}
-# Remove genes which has all zero values for all samples then start DE analysis
-mbxCount[is.na(mbxCount)] <- 0
-nonzero <- rowSums(mbxCount[,4:ncol(mbxCount)]) > 0
-mbxCount <- mbxCount[nonzero,]
-
-#remove(nonzero)
-```
-
-## T-tests
-
-```{r}
-# Separate CD, UC and nonIBD
-metaData.CD <- metaData[metaData$diagnosis=="CD",]
-metaData.UC <- metaData[metaData$diagnosis=="UC",]
-metaData.nonIBD <- metaData[metaData$diagnosis=="nonIBD",]
-
-# Select metagenomics data from CD, UC and nonIBD
-mbxCount.CD <- subset(mbxCount[,4:ncol(mbxCount)], select=metaData.CD$External.ID)
-mbxCount.UC <- subset(mbxCount[,4:ncol(mbxCount)], select=metaData.UC$External.ID)
-mbxCount.nonIBD <- subset(mbxCount[,4:ncol(mbxCount)], select=metaData.nonIBD$External.ID)
-
-#remove(metaData.CD, metaData.UC, metaData.nonIBD, metaData, mbxCount)
-```
-
-### T-tests for Crohn's Disease (CD)
-
-```{r}
-# Compute statistical significance (using t-test)
-pValue.CD = NULL # Empty list for the p-values
-
-for(i in 1 : nrow(mbxCount.nonIBD)) { # For each gene : 
-	x = mbxCount.nonIBD[i,] # control of gene number i
-	y = mbxCount.CD[i,] # CD of gene number i
-	
-	# Compute t-test between the two conditions
-	t = t.test(x, y)
-	
-	# Put the current p-value in the pvalues list
-	pValue.CD[i] = t$p.value
-}
-
-# Apply Benjamini Hochberg correction to pvalues to correct for multiple testing
-pAdjust.CD = p.adjust(pValue.CD, method="BH", n= nrow(mbxCount.nonIBD))
-
-#remove(pValue.CD, t, x, y, i)
-```
-
-### T-tests for Ulcerative colitis (UC)
-
-```{r}
-# Compute statistical significance (using t-test)
-pValue.UC = NULL # Empty list for the p-values
-
-for(i in 1 : nrow(mbxCount.nonIBD)) { # For each gene : 
-	x = mbxCount.nonIBD[i,] # control of gene number i
-	y = mbxCount.UC[i,] # UC of gene number i
-	
-	# Compute t-test between the two conditions
-	t = t.test(x, y)
-	
-	# Put the current p-value in the pvalues list
-	pValue.UC[i] = t$p.value
-}
-
-# Apply Benjamini Hochberg correction to pvalues to correct for multiple testing
-pAdjust.UC = p.adjust(pValue.UC, method="BH", n= nrow(mbxCount.nonIBD))
-
-#remove(pValue.UC, t, x, y, i, mbxCount.nonIBD)
-```
-
-### Select statistically significant enzymes
-
-```{r}
-# Select statistically significant enzymes
-deg.CD <- mbxCount.CD[which(pAdjust.CD<0.05),]
-deg.CD$pAdjust <- pAdjust.CD[which(pAdjust.CD<0.05)]
-deg.UC <- mbxCount.UC[which(pAdjust.UC<0.05),]
-deg.UC$pAdjust <- pAdjust.UC[which(pAdjust.UC<0.05)]
-
-# Get the row names and split them at the colon
-deg.UC.EC <- row.names(deg.UC)
-deg.UC.EC <- lapply(strsplit(deg.UC.EC, ":"), "[[", 1)
-deg.CD.EC <- row.names(deg.CD)
-deg.CD.EC <- lapply(strsplit(deg.CD.EC, ":"), "[[", 1)
-
-#remove(pAdjust.CD, pAdjust.UC)
 ```
 
 ## Calculate the ORA score for each pathway
@@ -306,22 +195,81 @@ deg.CD.EC <- lapply(strsplit(deg.CD.EC, ":"), "[[", 1)
 
 
 ```{r}
-deg.nonIBD.EC <- row.names(mbxCount.nonIBD)
-deg.nonIBD.EC <- lapply(strsplit(deg.nonIBD.EC, ":"), "[[", 1)
 
-PW.to.enzyme <- as.data.frame(t(as.data.frame(sapply(PW.all.enz, rbind))))
-PW.to.enzyme$pathway <- rownames(PW.to.enzyme)
-colnames(PW.to.enzyme) <- c("enzyme", "pathway")
-PW.to.enzyme <- PW.to.enzyme[,c(2,1)]
-PW.to.enzyme$pathway <- sub("\\..*", "", PW.to.enzyme$pathway)
+PW.to.compound <- as.data.frame(t(as.data.frame(sapply(PW.to.compound, rbind))))
+PW.to.compound$pathway <- rownames(PW.to.compound)
+colnames(PW.to.compound) <- c("compound", "pathway")
+PW.to.compound <- PW.to.compound[,c(2,1)]
+PW.to.compound$pathway <- sub("\\..*", "", PW.to.compound$pathway)
+PW.to.compound$compound <- sub("\\s\\s.*", "", PW.to.compound$compound)
 
 PW.to.name <- data.frame("pathway"=names(PW.all.names), "name"=unlist(PW.all.names))
 
-res <- enricher(gene=as.factor(unlist(deg.UC.EC)),
-                TERM2GENE = PW.to.enzyme,
+res.UC <- enricher(gene=as.factor(unlist(deg.UC)),
+                TERM2GENE = PW.to.compound,
                 TERM2NAME = PW.to.name)
 
-summary(res)
+summary(res.UC)
 ```
 
 
+### ORA score for Crohn's Disease (CD)
+
+```{r}
+res.CD <- enricher(gene=as.factor(unlist(deg.CD)),
+                TERM2GENE = PW.to.compound,
+                TERM2NAME = PW.to.name)
+
+summary(res.CD)
+```
+
+## Plot the results in a horizontal bar chart
+
+### Plot for Ulcerative colitis (UC)
+
+
+```{r}
+# Horizontal bar plot of significant pathways in UC
+res.UC[which(res.UC$p.adjust < 0.05),] %>% 
+  ggplot(aes(reorder(as.character(Description), Count), Count)) + 
+  geom_col(aes(fill = p.adjust)) + 
+  scale_fill_gradient2(low = "#0000ff", 
+                       mid = "#ff0000",
+                       high= "yellow",
+                       midpoint = 0.001) +
+  coord_flip() + 
+  labs(x = "Pathways (UC)", y = "Enzyme count")
+```
+
+
+### Plot for Crohn's Disease (CD)
+
+```{r}
+res.CD[which(res.CD$p.adjust < 0.05),] %>% 
+  ggplot(aes(reorder(as.character(Description), Count), Count)) + 
+  geom_col(aes(fill = p.adjust)) + 
+  scale_fill_gradient2(low = "#0000ff", 
+                       mid = "#ff0000",
+                       high= "yellow",
+                       midpoint = 0.001) +
+  coord_flip() + 
+  labs(x = "Pathways (UC)", y = "Enzyme count")
+```
+
+## Writing output tables in csv file
+
+```{r}
+# Write the output in a file
+write.table(res.UC, "output/mbxPWdata_UC.csv", sep =",", row.names = FALSE)
+
+# Write the output in a file
+write.table(res.CD, "output/mbxPWdata_CD.csv", sep =",", row.names = FALSE)
+```
+
+
+## Print session info:
+
+```{r print_session_info}
+##Print session info:
+sessionInfo()
+```
